--- a/src/tpl/layouts/default.html
+++ b/src/tpl/layouts/default.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
 
-  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/style.min.css">
 
 
 
@@ -16,7 +16,7 @@
 
 <body>
 
-  <div class="overlay"></div>
+  <div class="overlay"></div>   <!-- create overlay to force  burger menu being closed when clicking outsite burger menu -->
 
 
   {{> header--top }}
@@ -46,7 +46,7 @@
 
 
 
-  <script src="./assets/js/main.js">
+  <script src="./assets/js/main.min.js">
 
   </script>
 
