--- a/src/tpl/partials/about.html
+++ b/src/tpl/partials/about.html
@@ -1,7 +1,7 @@
 <section class="about container" id="about">
     <div class="about-container  row">
         <div class="about__img-container col">
-            <img src="../../assets/images/devices.png" alt="" class="about-img">
+            <img src="./assets/images/devices.png" alt="" class="about-img">
         </div>
         <div class="about__content-wrapper col">
             <h3 class="about__sub-title">dip into the details</h3>
