--- a/src/tpl/partials/device.html
+++ b/src/tpl/partials/device.html
@@ -13,7 +13,7 @@
                 </p>
             </div>
             <div class="device__img-container col">
-                <img src="../../assets/images/device.png" alt="" class="device__img">
+                <img src="./assets/images/device.png" alt="" class="device__img">
                 <div>
                 </div>
             </div>
