--- a/src/tpl/partials/header--top.html
+++ b/src/tpl/partials/header--top.html
@@ -72,7 +72,7 @@
           </div>
         </div>
         <div class="introduction__img-container col">
-          <img src="../../assets/images/introduction.png" class="introduction__img">
+          <img src="./assets/images/introduction.png" class="introduction__img">
         </div>
       </div>
     </div>
