refactor: write code commits for html page

--- a/src/tpl/partials/about.html
+++ b/src/tpl/partials/about.html
@@ -1,3 +1,4 @@
+<!-- about section  it consists of a container with two columns, one containing an image and the other containing text.-->
 <section class="about container" id="about">
     <div class="about-container  row">
         <div class="about__img-container col">
