--- a/src/tpl/partials/contacts.html
+++ b/src/tpl/partials/contacts.html
@@ -1,3 +1,4 @@
+<!-- this is a section  that contains two sub-sections: contacts and map-->
 <section class="contacts" id="contacts">
     <div class="container">
         <div class="contacts__container">
@@ -39,7 +40,7 @@
                 </div>
             </div>
 
-
+        <!--The "form" element contains a form with four input fields -->
 
 
             <div class="form ">
@@ -90,7 +91,7 @@
     </div>
 </section>
 
-
+<!-- the map section contains an embedded google map using an iframe element  -->
 
 <section class="map">
 
