--- a/src/tpl/partials/device.html
+++ b/src/tpl/partials/device.html
@@ -1,3 +1,5 @@
+<!-- device section  it consists of a container with two columns, one containing an image and the other containing content-->
+
 <section class="device">
     <div class="container">
         <div class="device__container  row">
