--- a/src/tpl/partials/features.html
+++ b/src/tpl/partials/features.html
@@ -1,13 +1,15 @@
+<!-- features section containts a list of features. The section contains a container with a row that has two main wrappers:-->
 <section class="features " id="features">
     <div class="container">
         <div class="features__container row">
+         <!--  a top wrapper with a sub-title, title and line --> 
             <div class="features__top-wrapper">
                 <h3 class="features__sub-title">product overwiew </h3>
                 <h2 class="features__title"> List of amazing features</h2>
                 <span class="lines__features"></span>
             </div>
 
-
+         <!-- and a list container with four list item wrappers.--> 
             <div class="features__list-container row">
                 <div class="features__list-item__wrapper col-lg-3 col-md-6 col-sm-12">
                     <div class="features__icon-wrapper">
