--- a/src/tpl/partials/header--top.html
+++ b/src/tpl/partials/header--top.html
@@ -1,5 +1,7 @@
-<div class="header__bg">
+<!-- two section with introduction image where header and  introduction section is included-->
 
+<div class="header__bg">
+<!-- header section  -->
   <header class="header">
     <div class="container">
 
@@ -55,6 +57,7 @@
 
     </div>
   </header>
+<!-- introduction section -->
 
   <section class="introduction #  " id="home">
 
