--- a/src/tpl/partials/pricing-plans.html
+++ b/src/tpl/partials/pricing-plans.html
@@ -1,3 +1,6 @@
+
+<!-- pricing section which includes 4 cards container -->
+
 <section class="pricing-plans" id="pricing">
     <div class="container">
         <div class="pricing-plans__container">
