--- a/src/tpl/partials/testimonals.html
+++ b/src/tpl/partials/testimonals.html
@@ -1,3 +1,5 @@
+<!-- testimonals section with slider  -->
+
 <section class="testimonals" id="testimonals">
     <div class="container">
         <div class="testimonals__container">
@@ -6,7 +8,7 @@
                 <h2 class="testimonals__title"> Pricings & Plans</h2>
                 <span class="lines__testimonals"></span>
             </div>
-
+          <!--The slider has four slides, each containing two testimonials. -->  
             <div class="slider swiper-container">
                 <div class=" slider__wrapper swiper-wrapper">
                     <div class="slider__slide swiper-slide">
