--- a/src/tpl/partials/footer.html
+++ b/src/tpl/partials/footer.html
@@ -1,3 +1,4 @@
+<!-- footer section with two container one contain a list of social media and other includes copyright text -->
 <footer class="footer">
   <div class="container">
     <div class="footer__container">
