--- a/src/tpl/partials/device.html
+++ b/src/tpl/partials/device.html
@@ -1,6 +1,6 @@
 <!-- device section  it consists of a container with two columns, one containing an image and the other containing content-->
 
-<section class="device">
+<section class="device" id="device">
     <div class="container">
         <div class="device__container  row">
             <div class="device__content-wrapper col">
