--- a/src/tpl/partials/header--top.html
+++ b/src/tpl/partials/header--top.html
@@ -1,7 +1,7 @@
 <!-- two section with introduction image where header and  introduction section is included-->
 
 <div class="header__bg">
-<!-- header section  -->
+  <!-- header section  -->
   <header class="header">
     <div class="container">
 
@@ -17,12 +17,13 @@
 
 
         <ul class="nav navbar-nav header__nav  d-flex flex-row  ">
-          <li class="navbar__item "><a class="navbar__link "  href="#home" data-target="home">Home</a></li>
-          <li class="navbar__item "><a class="navbar__link "  href="#features" data-target="features">Features</a></li>
-          <li class="navbar__item "><a class="navbar__link "  href="#about" data-target="about">About</a></li>
-          <li class="navbar__item "><a class="navbar__link  " href="#testimonals" data-target="testimonals">Testimonals</a></li>
-          <li class="navbar__item "><a class="navbar__link "  href="#pricing" data-target="pricing">Pricing</a></li>
-          <li class="navbar__item "><a class="navbar__link "  href="#contacts" data-target="contacts">Contact</a></li>
+          <li class="navbar__item "><a class="navbar__link active" href="#home" data-target="home">Home</a></li>
+          <li class="navbar__item "><a class="navbar__link " href="#features" data-target="features">Features</a></li>
+          <li class="navbar__item "><a class="navbar__link " href="#about" data-target="about device">About</a></li>
+          <li class="navbar__item "><a class="navbar__link  " href="#testimonals"
+              data-target="testimonals testimonals-bottom">Testimonals</a></li>
+          <li class="navbar__item "><a class="navbar__link " href="#pricing" data-target="pricing">Pricing</a></li>
+          <li class="navbar__item "><a class="navbar__link " href="#contacts" data-target="contacts">Contact</a></li>
 
         </ul>
 
@@ -34,12 +35,17 @@
 
       <nav class="navbar__mob">
         <ul class="nav-list__mob">
-          <li class="navbar__item-mob"><a class="navbar__link-mob" href="#home">Home</a></li>
-          <li class="navbar__item-mob"><a class="navbar__link-mob" href="#features">Features</a></li>
-          <li class="navbar__item-mob"><a class="navbar__link-mob" href="#about">About</a></li>
-          <li class="navbar__item-mob"><a class="navbar__link-mob" href="#testimonals">Testimonals</a></li>
-          <li class="navbar__item-mob"><a class="navbar__link-mob" href="#pricing">Pricing</a></li>
-          <li class="navbar__item-mob"><a class="navbar__link-mob" href="#contacts">Contact</a></li>
+          <li class="navbar__item-mob"><a class="navbar__link-mob" href="#home" data-target="home">Home</a></li>
+          <li class="navbar__item-mob"><a class="navbar__link-mob" href="#features" data-target="features">Features</a>
+          </li>
+          <li class="navbar__item-mob"><a class="navbar__link-mob" href="#about" data-target="about device">About</a>
+          </li>
+          <li class="navbar__item-mob"><a class="navbar__link-mob" href="#testimonals"
+              data-target="testimonals testimonals-bottom">Testimonals</a></li>
+          <li class="navbar__item-mob"><a class="navbar__link-mob" href="#pricing" data-target="pricing">Pricing</a>
+          </li>
+          <li class="navbar__item-mob"><a class="navbar__link-mob" href="#contacts" data-target="contacts">Contact</a>
+          </li>
         </ul>
       </nav>
 
@@ -57,7 +63,7 @@
 
     </div>
   </header>
-<!-- introduction section -->
+  <!-- introduction section -->
 
   <section class="introduction #  " id="home">
 
