--- a/src/tpl/partials/testimonals.html
+++ b/src/tpl/partials/testimonals.html
@@ -8,7 +8,7 @@
                 <h2 class="testimonals__title"> Pricings & Plans</h2>
                 <span class="lines__testimonals"></span>
             </div>
-          <!--The slider has four slides, each containing two testimonials. -->  
+            <!--The slider has four slides, each containing two testimonials. -->
             <div class="slider swiper-container">
                 <div class=" slider__wrapper swiper-wrapper">
                     <div class="slider__slide swiper-slide">
@@ -147,7 +147,7 @@
 </section>
 
 
-<section class="testimonals__bottom-content">
+<section class="testimonals__bottom-content" id="testimonals-bottom">
     <div class="container testimonals__bottom-container">
         <h2 class="testimonals__bottom-title">Like what you see? <span>Get this great theme now!</span> </h2>
         <div class="testimonals__btn-container ">
